--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,8 @@ code_dir: downloads/code
 category_dir: blog/categories
 include:
   - .htaccess
+  - bgps
+  - publications
 markdown: rdiscount
 pygments: false # Jekyll's default Python Pygments have been replaced by pygments.rb. Set to true to use Albino + Pythong Pygments
 
@@ -48,6 +50,7 @@ permalink_label_feed: "&#9875; Permalink"
 linklog_marker: "&rarr;"
 linklog_marker_position: after
 linklog_marker_position_feed: after
+category_feeds: true
 standard_post_marker:
 
 titlecase: true       # Converts page and post titles to titlecase
@@ -60,7 +63,7 @@ post_sidebar: post_default.html
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # to add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-#default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 
 # ----------------------- #
